--- a/app/src/main/res/layout/calendar_fragment.xml
+++ b/app/src/main/res/layout/calendar_fragment.xml
@@ -4,49 +4,6 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <!-- <RelativeLayout
-         android:id="@+id/header"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:background="@drawable/calendar_top" >
- -->
-    <!--        <RelativeLayout
-                android:id="@+id/previous"
-                android:layout_width="40dip"
-                android:layout_height="30dip"
-                android:layout_alignParentLeft="true" >
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:background="@drawable/arrow_left" />
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="5dip"
-                android:textColor="#000000"
-                android:textSize="18dip"
-                android:textStyle="bold" />
-
-            <RelativeLayout
-                android:id="@+id/next"
-                android:layout_width="40dip"
-                android:layout_height="30dip"
-                android:layout_alignParentRight="true" >
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:background="@drawable/arrow_right" />
-            </RelativeLayout>-->
-    <!--</RelativeLayout>-->
-
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -74,18 +31,6 @@
                 android:layout_alignParentLeft="true"
                 android:src="@drawable/arrow_left"/>
 
-            <!-- date title -->
-            <!--  <TextView
-                  android:id="@+id/calendar_date_display"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_centerVertical="true"
-                  android:layout_toRightOf="@+id/previous"
-                  android:layout_toLeftOf="@+id/next"
-                  android:gravity="center"
-                  android:textAppearance="@android:style/TextAppearance.Medium"
-                  android:textColor="#222222"
-                  android:text="current date"/>-->
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
@@ -175,12 +120,6 @@
         </LinearLayout>
 
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-
             <GridView
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/gridview"
@@ -197,9 +136,25 @@
                 android:layout_width="fill_parent"
                 android:id="@+id/event_listview"
                 android:layout_height="fill_parent"/>
+<!--
+            <ScrollView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
 
 
-        </LinearLayout>
+                 >
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical"
+                    android:id="@+id/events_layout">
+
+                </LinearLayout>
+
+            </ScrollView>-->
+
     </LinearLayout>
 
 </RelativeLayout>
