--- a/app/src/main/res/layout/log_in_fragment.xml
+++ b/app/src/main/res/layout/log_in_fragment.xml
@@ -66,6 +66,15 @@
 
     </LinearLayout>
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Remember me"
+        android:id="@+id/newStudentCheckBox"
+        android:checked="false"
+        android:layout_marginTop="20dp"
+        android:textSize="20dp" />
+
     <Button
         android:layout_width="150dp"
         android:layout_height="60dp"
