--- a/app/src/main/res/menu/menu_calendar_adapter.xml
+++ b/app/src/main/res/menu/menu_calendar_adapter.xml
@@ -7,4 +7,24 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_camera"
+        android:orderInCategory="100"
+        android:title="@string/action_camera"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/camera"/>
+    <item
+        android:id="@+id/action_SMS"
+        android:orderInCategory="100"
+        android:title="@string/action_SMS"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/sms_icon"/>
+    <item
+        android:id="@+id/action_notification"
+        android:orderInCategory="100"
+        android:title="@string/action_notification"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/notification_icon"/>
+
+
 </menu>
