--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -17,6 +17,11 @@
             android:layout_height="fill_parent"
             android:id="@+id/new_event_frag_container">
         </FrameLayout>
+        <FrameLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/solution_frag_container">
+        </FrameLayout>
 
     </RelativeLayout>
 </LinearLayout>
