--- a/app/src/main/res/layout/do_with_dialog.xml
+++ b/app/src/main/res/layout/do_with_dialog.xml
@@ -3,4 +3,56 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/old_contact"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="15dp"
+        android:text="Pick an exist contact"
+
+        >
+    </Button>
+
+    <Button
+        android:id="@+id/new_contact"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/old_contact"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="15dp"
+        android:text="Pick a new contact"
+
+        >
+    </Button>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        >
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="68dp"
+            android:text="Cancel"
+            android:id="@+id/cancelDoWith"
+            android:layout_weight="1"
+            android:layout_gravity="bottom"
+            />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="68dp"
+            android:text="Submit"
+            android:id="@+id/submitDoWith"
+            android:layout_weight="1"
+            android:layout_gravity="bottom"
+            />
+
+
+    </LinearLayout>
+
 </LinearLayout>
