--- a/app/src/main/res/menu/menu_calendar_adapter.xml
+++ b/app/src/main/res/menu/menu_calendar_adapter.xml
@@ -40,6 +40,12 @@
         android:title="@string/action_notification"
         app:showAsAction="ifRoom"
         android:icon="@drawable/notification_icon"/>
+    <item
+        android:id="@+id/action_register"
+        android:orderInCategory="100"
+        android:title="@string/action_register"
+        app:showAsAction="never"
+        />
 
 
 </menu>
