--- a/app/src/main/res/menu/menu_calendar_adapter.xml
+++ b/app/src/main/res/menu/menu_calendar_adapter.xml
@@ -41,9 +41,9 @@
         app:showAsAction="ifRoom"
         android:icon="@drawable/notification_icon"/>
     <item
-        android:id="@+id/action_register"
+        android:id="@+id/action_login"
         android:orderInCategory="100"
-        android:title="@string/action_register"
+        android:title="@string/action_logout"
         app:showAsAction="never"
         />
 
