--- a/app/src/main/res/layout/sms_dialog.xml
+++ b/app/src/main/res/layout/sms_dialog.xml
@@ -6,6 +6,12 @@
     <ListView
         android:id="@+id/sms_dialog_list"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"/>
+        android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/sms_dialog_cancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
+        />
 
 </LinearLayout>
