--- a/app/src/main/res/layout/solution_fragment.xml
+++ b/app/src/main/res/layout/solution_fragment.xml
@@ -118,9 +118,34 @@
 
         <NumberPicker
             android:id="@+id/time_before_picker"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"  />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save"
+            android:id="@+id/solution_save"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cancel"
+            android:id="@+id/solution_cancel"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            />
+
+        </LinearLayout>
 
 
 </LinearLayout>
