--- a/app/src/main/res/layout/new_event_fragment.xml
+++ b/app/src/main/res/layout/new_event_fragment.xml
@@ -126,7 +126,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="start time:"
+            android:text="end time:"
             android:autoText="false"
             android:textSize="20dp" />
 
