--- a/app/src/main/res/menu/menu_edit.xml
+++ b/app/src/main/res/menu/menu_edit.xml
@@ -29,11 +29,11 @@
         app:showAsAction="ifRoom"
         android:icon="@drawable/camera"/>
     <item
-        android:id="@+id/action_add"
+        android:id="@+id/action_delete"
         android:orderInCategory="100"
-        android:title="@string/action_add"
+        android:title="@string/action_delete"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/add_button"/>
+        android:icon="@drawable/delete_icon"/>
 
 
 </menu>
