--- a/app/src/main/res/menu/menu_calendar_adapter.xml
+++ b/app/src/main/res/menu/menu_calendar_adapter.xml
@@ -34,6 +34,11 @@
         android:title="@string/action_add"
         app:showAsAction="ifRoom"
         android:icon="@drawable/add_button"/>
-
+    <item
+        android:id="@+id/fragment_user"
+        android:orderInCategory="100"
+        android:title="@string/fragment_user"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/notification_icon"/>
 
 </menu>
