--- a/app/src/main/res/layout/new_event_fragment.xml
+++ b/app/src/main/res/layout/new_event_fragment.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@color/summer">
 
 
 
@@ -13,6 +14,7 @@
         android:layout_height="wrap_content"
         android:clipToPadding="false"
         android:paddingTop="?android:attr/actionBarSize"
+
 
        >
             <TextView
@@ -174,7 +176,10 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="What to do"/>
+        android:text="What to do"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/text"/>
+
 
     <LinearLayout
         android:orientation="horizontal"
@@ -187,7 +192,9 @@
             android:text="Cancel"
             android:id="@+id/cancelB"
             android:layout_weight="1"
-            android:layout_gravity="bottom" />
+            android:layout_gravity="bottom"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/text"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -195,7 +202,9 @@
             android:text="Save"
             android:id="@+id/saveB"
             android:layout_weight="1"
-            android:layout_gravity="bottom" />
+            android:layout_gravity="bottom"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/text"/>
 
 
     </LinearLayout>
