--- a/app/src/main/res/layout/do_with_dialog.xml
+++ b/app/src/main/res/layout/do_with_dialog.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <Button
         android:id="@+id/old_contact"
@@ -11,6 +12,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
         android:text="Pick an exist contact"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/text"
 
         >
     </Button>
@@ -24,6 +27,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
         android:text="Pick a new contact"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/text"
 
         >
     </Button>
@@ -41,6 +46,8 @@
             android:id="@+id/cancelDoWith"
             android:layout_weight="1"
             android:layout_gravity="bottom"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/text"
             />
 
         <Button
@@ -50,6 +57,8 @@
             android:id="@+id/submitDoWith"
             android:layout_weight="1"
             android:layout_gravity="bottom"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/text"
             />
 
 
