--- a/app/src/main/res/layout/event_row.xml
+++ b/app/src/main/res/layout/event_row.xml
@@ -4,13 +4,33 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    >
+    android:weightSum="1">
 
-    <TextView
-        android:layout_width="wrap_content"
+
+
+    <RelativeLayout
+        android:layout_width="332dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="first"
-        android:id="@+id/event_text" />
+        android:layout_weight="1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="first"
+            android:id="@+id/event_text" />
+
+
+    </RelativeLayout>
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:id="@+id/event_row_image"
+
+
+        />
+
+-->
 
 </LinearLayout>
