--- a/app/src/main/res/layout/sms_dialog.xml
+++ b/app/src/main/res/layout/sms_dialog.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/summer">
 
     <ListView
         android:id="@+id/sms_dialog_list"
@@ -12,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Cancel"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/text"
         />
 
 </LinearLayout>
