--- a/app/src/main/res/layout/popup_dialog.xml
+++ b/app/src/main/res/layout/popup_dialog.xml
@@ -7,7 +7,7 @@
     <ListView
         android:id="@+id/popup_dialog_list"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"/>
+        android:layout_height="wrap_content"/>
     <Button
         android:id="@+id/popup_dialog_cancel"
         android:layout_width="match_parent"
