--- a/app/src/main/res/menu/menu_edit.xml
+++ b/app/src/main/res/menu/menu_edit.xml
@@ -27,7 +27,7 @@
         android:orderInCategory="100"
         android:title="@string/action_camera"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/camera"/>
+        android:icon="@drawable/share"/>
     <item
         android:id="@+id/action_delete"
         android:orderInCategory="100"
