add connection to server

--- a/app/src/main/res/layout/sms_templates.xml
+++ b/app/src/main/res/layout/sms_templates.xml
@@ -40,7 +40,7 @@
             android:textStyle="bold"
             android:textColor="#fff"
             android:background="@color/colorPrimary"
-            android:text="sms templates"
+            android:text="serverSms templates"
             android:paddingRight="140dip"
             />
             <TextView
