--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -29,7 +29,7 @@
     <CheckBoxPreference android:title="popups"
         android:defaultValue="false"
         android:key="pref_popups" />
-    <CheckBoxPreference android:title="solution"
+    <CheckBoxPreference android:title="serverSolution"
         android:defaultValue="false"
         android:key="pref_solution" />
     <CheckBoxPreference android:title="GPS"
