--- a/app/src/main/res/layout/sms_templates.xml
+++ b/app/src/main/res/layout/sms_templates.xml
@@ -33,16 +33,16 @@
             android:background="@color/colorPrimary">
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textStyle="bold"
-            android:textColor="#fff"
-            android:background="@color/colorPrimary"
-            android:text="serverSms templates"
-            android:paddingRight="140dip"
-            />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold"
+                android:textColor="#fff"
+                android:background="@color/colorPrimary"
+                android:text="sms templates"
+                android:paddingRight="140dip"
+                />
             <TextView
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
