--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:background="@color/summer">
 
+    <ProgressBar
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/sdProgressBar"
+        style="@android:style/Widget.Holo.ProgressBar.Horizontal"
+        android:indeterminate="true" />
     <ImageView
         android:id="@+id/previous"
         android:layout_width="150dp"
