--- a/app/src/main/res/layout/history_activity.xml
+++ b/app/src/main/res/layout/history_activity.xml
@@ -56,7 +56,7 @@
                 />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="114dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold"
