--- a/app/src/main/res/layout/history_activity.xml
+++ b/app/src/main/res/layout/history_activity.xml
@@ -46,7 +46,7 @@
                 android:paddingLeft="5dip"
                 />
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold"
